test/expected/declare_v.out
declare x as void
        ^
9: error: variable of "void"; did you mean "pointer to void"?
